# python-package-exercise-project-3-team-13

./: MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt
.github/workflow/: build.yaml
.github/workflows/: build.yaml
src/code_snippets/: java.txt
src/team13LoremIpsum/: __main__.py  hackertype.py  penetrate.py  requirements.txt
src/team13LoremIpsum/code_snippets/: python.txt
src/team13hackertype/: __main__.py  hackertype.py  penetrate.py
team13LoremIpsum/: __main__.py
tests/: test_hackertype.py  test_loremipsum.py  test_penetrate.py
